# console-checkers

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Color.h  Game.h  Piece.h  Point.h  Square.h  TerminalSprite.h
source/: Board.cpp  CMakeLists.txt  Color.cpp  Game.cpp  Piece.cpp  Point.cpp  Square.cpp  TerminalSprite.cpp  main.cpp
tests/: BoardTest.h  CMakeLists.txt  ColorTest.h  GameTest.h  PieceTest.h  PointTest.h  SquareTest.h  TerminalSpriteTest.h  tests.cpp
